Fix broken css

--- a/client/my-sites/people/contractor-select/style.scss
+++ b/client/my-sites/people/contractor-select/style.scss
@@ -5,6 +5,6 @@
 .contractor-select .support-info {
 	display: inline-block;
 	float: none;
-	margin-right: 0 0 0 10px;
+	margin: 0 0 0 10px;
 	vertical-align: middle;
 }
